@@ -5,6 +5,8 @@ Add new items to top.
 2007-01-05 Kimmo
  PATCH: [ 1628203 ] Reduce options caching in MergeEditView
   Src: MergeEditView.cpp MergeEditView.h
+ PATCH: [ 1628299 ] Use OptionsMgr for archive options
+  Src: 7zCommon.cpp
 
 2007-01-04 Kimmo
  PATCH: [ 1625344 ] Move OptionsMgr from MainFrame to MergeApp
